--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <title>GCS Mobile by AaronAcerboni</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-dark.css">
-    <script src="javascripts/scale.fix.js"></script>
+    <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -19,7 +17,10 @@
       <header>
         <h1>GCS Mobile</h1>
         <p>Ionic source files. Mobile app intended for health professionals wishing to assess an individuals GCS.</p>
+
         <p class="view"><a href="https://github.com/AaronAcerboni/glasgow-coma-scale-mobile">View the Project on GitHub <small>AaronAcerboni/glasgow-coma-scale-mobile</small></a></p>
+
+
         <ul>
           <li><a href="https://github.com/AaronAcerboni/glasgow-coma-scale-mobile/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/AaronAcerboni/glasgow-coma-scale-mobile/tarball/master">Download <strong>TAR Ball</strong></a></li>
@@ -27,44 +28,54 @@
         </ul>
       </header>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h1>
+<a id="gcs-mobile" class="anchor" href="#gcs-mobile" aria-hidden="true"><span class="octicon octicon-link"></span></a>GCS Mobile</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>The Glasgow Coma Score mobile app is intended to assist health professionals wishing to assess an adult or child <a href="http://en.wikipedia.org/wiki/Glasgow_Coma_Scale">GCS</a>.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p>This repository contains the <a href="http://ionicframework.com">ionic</a> source files for a hybrid mobile app.</p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p><img src="https://raw.githubusercontent.com/AaronAcerboni/glasgow-coma-scale-mobile/master/screenshots/main.jpg" alt="Home screen"></p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p><img src="https://raw.githubusercontent.com/AaronAcerboni/glasgow-coma-scale-mobile/master/screenshots/question.jpg" alt="Assessment question"></p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p><img src="https://raw.githubusercontent.com/AaronAcerboni/glasgow-coma-scale-mobile/master/screenshots/outcome.jpg" alt="Outcome"></p>
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<h1>
+<a id="requirements" class="anchor" href="#requirements" aria-hidden="true"><span class="octicon octicon-link"></span></a>Requirements</h1>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p><code>git clone git@github.com:AaronAcerboni/glasgow-coma-scale-mobile.git</code></p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<p>This app is build with the <a href="http://ionicframework.com">ionic mobile framework</a>, therefore <a href="http://nodejs.org">node and npm</a> are also requirements.</p>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Install ionic with the following command:</p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<p><code>npm install -g ionic cordova</code></p>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>If you are finding difficulties consult the ionic <a href="http://ionicframework.com/docs/guide/installation.html">getting started</a> documentation.</p>
+
+<h1>
+<a id="testing" class="anchor" href="#testing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Testing</h1>
+
+<p>When ionic is installed run the following command in the source code directory.</p>
+
+<p><code>ionic serve</code></p>
+
+<p>This will launch the app in your default browser.</p>
+
+<h1>
+<a id="compilation-to-android-and-ios" class="anchor" href="#compilation-to-android-and-ios" aria-hidden="true"><span class="octicon octicon-link"></span></a>Compilation to Android and iOS</h1>
+
+<p>These project files have not yet been configured for Android or IOS compilation.</p>
+
+<p>Consult the <a href="http://ionicframework.com/docs/guide/installation.html">ionic documentation</a> guide to see how.</p>
       </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/AaronAcerboni">AaronAcerboni</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
     </div>
-    <footer>
-      <p>Project maintained by <a href="https://github.com/AaronAcerboni">AaronAcerboni</a></p>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    <script src="javascripts/scale.fix.js"></script>
     
   </body>
 </html>
